force-app/main/default/objects/BrillioFC__Automation_Rule_Detail__c/BrillioFC__Automation_Rule_Detail__c.object-meta.xml
<CustomObject>
    <label>ForceClinic Automation Rule Detail</label>
    <nameField>
        <label>ForceClinic Automation Rule Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ForceClinic Automation Rule Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>