force-app/main/default/objects/BrillioFC__Automation_Rule_Detail__c/fields/BrillioFC__isActive__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>