force-app/main/default/objects/BrillioFC__Automation_Rule_Detail__c/fields/BrillioFC__Object_Detail__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Object_Detail__c</fullName>
    <label>Object Detail</label>
    <referenceTo>BrillioFC__Object_Detail__c</referenceTo>
    <relationshipLabel>ForceClinic Automation Rule Details</relationshipLabel>
    <relationshipName>Automation_Rule_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>