force-app/main/default/objects/BrillioFC__Automation_Rule_Detail__c/fields/BrillioFC__Org_Detail__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Org_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ForceClinic Org Detail</label>
    <referenceTo>BrillioFC__Org_Details__c</referenceTo>
    <relationshipLabel>ForceClinic Automation Rule Details</relationshipLabel>
    <relationshipName>ForceClinic_Automation_Rule_Details</relationshipName>
    <type>Lookup</type>
</CustomField>