force-app/main/default/objects/BrillioFC__Automation_Rule_Detail__c/fields/BrillioFC__Type__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assignment Rule</fullName>
            </value>
            <value>
                <fullName>Escalation Rule</fullName>
            </value>
            <value>
                <fullName>Validation Rule</fullName>
            </value>
            <value>
                <fullName>Workflow Rule</fullName>
            </value>
            <value>
                <fullName>AutoResponse Rule</fullName>
            </value>
            <value>
                <fullName>Approval Process</fullName>
            </value>
            <value>
                <fullName>Process Builder</fullName>
                <isActive>false</isActive>
                <label>Process Builder</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>